# sqlalchemy-informix-ifxpy

./: LICENSE  Pipfile  README.md  README.rst  setup.cfg  setup.py
sqlalchemy_ifxpy/: __init__.py  base.py  ifxpy.py  requirements.py
test/: conftest.py
