[egg_info]
tag_build = dev

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:sqlalchemy_ifxpy/__init__.py]

[tools:pytest]
addopts = --tb native -v -r fxX
python_files = test/*test_*.py

[sqla_testing]
requirement_cls = sqlalchemy_ifxpy.requirements:Requirements
profile_file = .profiles.txt

[metadata]
name = sqlalchemy_ifxpy
version = attr:sqlalchemy_ifxpy.__version__
description = SQLAlchemy Informix IfxPy Dialect
long_description = file: README.rst
keywords = SQLAlchemy, Informix
license = MIT License
author = Tim Powell
author_email = 
home_page = 
platforms = any
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Database :: Front-Ends

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	ifxpy
	sqlalchemy

[options.packages.find]
exclude = 
	test


